# MyWiki

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml  wsgi.py
deploy/: gunicorn.conf.py
docs/: ARCHITECTURE.md  DEVELOPMENT.md  OPERATIONS.md  PROJECT_DISCOVERY.md  REQUIREMENTS.md  ROADMAP.md  USER_GUIDE.md
migrations/versions/: d9e7d6a773e8_validate_trash_purge_order.py  edfec9d7ddb0_initial_schema.py
src/mywiki/: __init__.py  config.py  extensions.py  models.py
src/mywiki/auth/: forms.py  routes.py
src/mywiki/documents/: __init__.py  forms.py  routes.py
src/mywiki/main/: __init__.py  routes.py
src/mywiki/services/: __init__.py  audit.py  authorization.py  documents.py  mail.py  markdown.py  passwords.py  starter_documents.py  tokens.py
src/mywiki/static/css/: app.css
src/mywiki/static/js/: app.js  theme.js
src/mywiki/templates/: base.html
src/mywiki/templates/auth/: email_request.html  login.html  register.html  reset_password.html
src/mywiki/templates/components/: flash.html
src/mywiki/templates/documents/: detail.html  form.html  history.html  revision.html  search.html  share.html  trash.html
src/mywiki/templates/emails/: action.html  action.txt
src/mywiki/templates/errors/: 403.html  404.html  409.html  500.html  503.html
src/mywiki/templates/macros/: forms.html
src/mywiki/templates/main/: dashboard.html  landing.html
tests/: __init__.py  conftest.py  test_app.py  test_auth.py  test_documents.py  test_mail.py  test_markdown.py
