[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "mywiki"
version = "0.1.0"
description = "Private personal wiki with document-level sharing"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "Flask[dotenv]>=3.1.3,<3.2",
    "Flask-Limiter>=4.1.1,<5",
    "Flask-Login>=0.6.3,<0.7",
    "Flask-Migrate>=4.1,<5",
    "Flask-SQLAlchemy>=3.1.1,<4",
    "Flask-WTF>=1.2.2,<2",
    "SQLAlchemy>=2.0.51,<2.1",
    "argon2-cffi>=25.1,<26",
    "email-validator>=2.2,<3",
    "markdown-it-py>=4.0,<5",
    "nh3>=0.3.6,<0.4",
    "psycopg[binary]>=3.3.4,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1,<10",
    "pytest-cov>=7.1,<8",
    "ruff>=0.15.21,<0.16",
]
deploy = [
    "gunicorn>=26,<27; sys_platform != 'win32'",
    "waitress>=3.0,<4; sys_platform == 'win32'",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mywiki = [
    "templates/**/*.html",
    "templates/**/*.txt",
    "static/**/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-config --strict-markers --basetemp=.tmp/pytest"
cache_dir = ".tmp/pytest-cache"
markers = [
    "integration: requires a dedicated PostgreSQL test database",
]

[tool.coverage.run]
branch = true
source = ["mywiki"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]
exclude = ["migrations"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
